# pic-flame

./: CMakeLists.txt  main.cpp
src/: config.cpp  config.h  main.cpp  main.h  util.cpp  util.h  vec.h
